--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["backend", "zero-waste-kitchen", "express", "mongodb"],
+  "keywords": [
+    "backend",
+    "zero-waste-kitchen",
+    "express",
+    "mongodb"
+  ],
   "author": "Yashwanth Gowda KS",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1"
   },
   "devDependencies": {
