--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/zero_waste_kitchen5
+MONGO_URI=mongodb+srv://yashwanthgowdaksyashugowda:vasantha2525@cluster0.ay3du.mongodb.net/zero_waste_kitchen5?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret
