--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://yashwanthgowdaksyashugowda:vasantha2525@cluster0.ay3du.mongodb.net/zero_waste_kitchen5?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret
+REACT_APP_EMAILJS_PUBLIC_KEY=7vJ5Nt-XXSnvf14oK
